<resources>
    <string name="app_name">Quickies</string>
    <string name="your_own_ai_assistant">Your own AI Assistant</string>
    <string name="welcome">Welcome</string>
    <string name="v_1_0">v 1.0</string>
    <string name="get_started">Get Started</string>
    <string name="powered_by_ai">Powered By AI</string>
    <string name="ai_assistant">AI Assistant</string>
    <string name="ask_me_general_questions">Ask me General Questions</string>
    <string name="enter_your_message">Enter your Message....</string>
    <string name="send_message">Send Message</string>
    <string name="chat_image">Chat Image</string>
    <string name="background_image">Background Image</string>
    <string name="back_button">Back Button</string>
    <string name="info">Info</string>
    <string name="hii_tell_me_a_joke">Hii, Tell me a joke!</string>
    <string name="answer_message">Answer Message</string>
    <string name="dummy_bot_message">This ChatBot Application is a lightweight version of the real-time AI Assistant and developed in a way that it will only solve the simple general life responses. It is not developed for powerful computations or response.</string>
    <string name="text_info_dialog1">This ChatBot Application is a lightweight version of the real-time AI Assistant and developed in a way that it will only solve the simple general life responses. It is not developed for powerful computations or response.</string>
    <string name="text_info_dialog2">This is just a starting version of the Chat Box. Currently, we are working on the heavy-weight chatbot application that can generate the responses like some popular AI tools like ChatGPT, BlackBox and many more.</string>
    <string name="close">Close</string>
    <string name="bot_message">Bot Message</string>
    <string name="user_message">User Message</string>
    <string name="please_enter_a_message">Please enter a message ...</string>
</resources>