<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/quickies_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_arrow_back"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/ic_quickies"
            android:layout_width="52dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_quickies_logo_white"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintStart_toEndOf="@id/ic_back"
            app:layout_constraintTop_toTopOf="@id/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/ic_back"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ai_assistant"
            android:fontFamily="@font/anekdevanagari_regular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="@id/ic_quickies"
            app:layout_constraintStart_toEndOf="@id/ic_quickies"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_me_general_questions"
            android:fontFamily="@font/anekdevanagari_regular"
            android:textSize="12sp"
            android:textColor="#BDFFFFFF"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintBottom_toBottomOf="@id/ic_quickies"
            app:layout_constraintStart_toEndOf="@id/ic_quickies"/>

        <ImageView
            android:id="@+id/ic_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_info"
            android:contentDescription="@string/info"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.appbar.AppBarLayout>