<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@color/white"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/ic_info"
        android:contentDescription="@string/info"
        app:tint="@color/quickies_blue"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_info_dialog1"
        android:fontFamily="@font/anekdevanagari_regular"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_info_dialog2"
        android:fontFamily="@font/anekdevanagari_regular"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/textView5"
        app:layout_constraintEnd_toEndOf="@id/textView5"
        app:layout_constraintTop_toBottomOf="@id/textView5"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_close"
        android:layout_width="97dp"
        android:layout_height="37dp"
        android:background="@drawable/background_btn_close"
        android:text="@string/close"
        android:fontFamily="@font/anekdevanagari_medium"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:gravity="center"
        android:paddingTop="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>